--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.0.18",
+    "theme-change": "^2.5.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
