--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/vue": "^2.0.18",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
+    "pinia": "^2.1.7",
     "theme-change": "^2.5.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
