--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,4 @@
 # variables prefixed with VITE_ are exposed to your Vite-processed code
 
 VITE_BASE_PUBLIC_PATH=
+VITE_DEFUALT_RESIDENT_IMAGE=4.jpg
