--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@kyvg/vue3-notification": "^3.0.2",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
+    "dayjs": "^1.11.10",
     "pinia": "^2.1.7",
     "theme-change": "^2.5.0",
     "vue": "^3.2.47",
