--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pinia": "^2.1.7",
     "theme-change": "^2.5.0",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-easy-data-table": "^1.5.47"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
