--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@heroicons/vue": "^2.0.18",
     "@kyvg/vue3-notification": "^3.0.2",
+    "@tato30/vue-pdf": "^1.8.1",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "dayjs": "^1.11.10",
