--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "build": "vite build",
-    "dev": "vite --host",
+    "dev": "VITE_ENV=dev vite --host",
     "local": "VITE_ENV=local vite --host",
+    "prod": "VITE_ENV=production vite",
     "lint": "pnpm run lint:js && pnpm run lint:style",
     "lint:fix": "pnpm run lint:js -- --fix && pnpm run lint:style -- --fix",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore src",
