--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
   "dependencies": {
     "@heroicons/vue": "^2.0.18",
     "@kyvg/vue3-notification": "^3.0.2",
+    "@sweetalert2/themes": "^5.0.15",
     "@tato30/vue-pdf": "^1.8.1",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "dayjs": "^1.11.10",
     "pinia": "^2.1.7",
+    "sweetalert2": "^11.10.1",
     "theme-change": "^2.5.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
+    "vue-sweetalert2": "^5.0.5",
     "vue3-easy-data-table": "^1.5.47"
   },
   "devDependencies": {
