--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sweetalert2": "^11.10.1",
     "theme-change": "^2.5.0",
     "vue": "^3.2.47",
+    "vue-i18n": "^9.8.0",
     "vue-router": "^4.1.6",
     "vue-sweetalert2": "^5.0.5",
     "vue3-easy-data-table": "^1.5.47"
