--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tato30/vue-pdf": "^1.8.1",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
+    "ant-design-vue": "^4.0.7",
     "dayjs": "^1.11.10",
     "pinia": "^2.1.7",
     "sweetalert2": "^11.10.1",
