--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@tato30/vue-pdf": "^1.8.1",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
+    "chart.js": "^4.4.1",
     "dayjs": "^1.11.10",
     "pinia": "^2.1.7",
     "sweetalert2": "^11.10.1",
     "theme-change": "^2.5.0",
     "vue": "^3.2.47",
+    "vue-chartjs": "^5.3.0",
     "vue-i18n": "^9.8.0",
     "vue-router": "^4.1.6",
     "vue-sweetalert2": "^5.0.5",
