--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "theme-change": "^2.5.0",
     "vue": "^3.2.47",
     "vue-chartjs": "^5.3.0",
+    "vue-countup-v3": "^1.4.1",
     "vue-i18n": "^9.8.0",
     "vue-router": "^4.1.6",
     "vue-sweetalert2": "^5.0.5",
