--- a/.env.dev
+++ b/.env.dev
@@ -3,3 +3,11 @@ VITE_BASE=/
 VITE_API_PATH=/api/v1
 VITE_GET_FILE_PATH=/upload
 VITE_PORT=80
+
+# Firebase config
+VITE_API_KEY=AIzaSyC85Vee09e0VQBFZWD_zBT04GYGsi5-pdE
+VITE_AUTH_DOMAIN=rms-system-92a3b.firebaseapp.com
+VITE_PROJECT_ID=rms-system-92a3b
+VITE_STORAGE_BUCKET=rms-system-92a3b.appspot.com
+VITE_MESSAGING_SENDER_ID=625083524803
+VITE_APP_ID=1:625083524803:web:48323dbdc0c87a2bcd2476
