--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@tato30/vue-pdf": "^1.8.1",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
+    "@vueuse/core": "^10.7.2",
     "chart.js": "^4.4.1",
     "dayjs": "^1.11.10",
+    "firebase": "^10.8.0",
     "pinia": "^2.1.7",
     "sweetalert2": "^11.10.1",
     "theme-change": "^2.5.0",
@@ -33,7 +35,8 @@
     "vue-i18n": "^9.8.0",
     "vue-router": "^4.1.6",
     "vue-sweetalert2": "^5.0.5",
-    "vue3-easy-data-table": "^1.5.47"
+    "vue3-easy-data-table": "^1.5.47",
+    "vuefire": "^3.1.22"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
