--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@heroicons/vue": "^2.0.18",
     "@kyvg/vue3-notification": "^3.0.2",
+    "@mdi/js": "^7.4.47",
     "@sweetalert2/themes": "^5.0.15",
     "@tato30/vue-pdf": "^1.8.1",
     "@vuelidate/core": "^2.0.3",
