--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "dependencies": {
     "@heroicons/vue": "^2.0.18",
     "@kyvg/vue3-notification": "^3.0.2",
-    "@mdi/js": "^7.4.47",
     "@sweetalert2/themes": "^5.0.15",
     "@tato30/vue-pdf": "^1.8.1",
     "@vuelidate/core": "^2.0.3",
@@ -26,7 +25,6 @@
     "@vueuse/core": "^10.7.2",
     "chart.js": "^4.4.1",
     "dayjs": "^1.11.10",
-    "firebase": "^10.8.0",
     "pinia": "^2.1.7",
     "sweetalert2": "^11.10.1",
     "theme-change": "^2.5.0",
@@ -35,9 +33,7 @@
     "vue-countup-v3": "^1.4.1",
     "vue-i18n": "^9.8.0",
     "vue-router": "^4.1.6",
-    "vue-sweetalert2": "^5.0.5",
-    "vue3-easy-data-table": "^1.5.47",
-    "vuefire": "^3.1.22"
+    "vue-sweetalert2": "^5.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
