--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/core": "^10.7.2",
+    "apexcharts": "^3.47.0",
     "chart.js": "^4.4.1",
     "dayjs": "^1.11.10",
     "pinia": "^2.1.7",
@@ -33,7 +34,8 @@
     "vue-countup-v3": "^1.4.1",
     "vue-i18n": "^9.8.0",
     "vue-router": "^4.1.6",
-    "vue-sweetalert2": "^5.0.5"
+    "vue-sweetalert2": "^5.0.5",
+    "vue3-apexcharts": "^1.5.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
