--- a/.env.localdev
+++ b/.env.localdev
@@ -11,3 +11,6 @@ VITE_PROJECT_ID=rms-system-92a3b
 VITE_STORAGE_BUCKET=rms-system-92a3b.appspot.com
 VITE_MESSAGING_SENDER_ID=625083524803
 VITE_APP_ID=1:625083524803:web:48323dbdc0c87a2bcd2476
+
+# URL
+VITE_HOST=http://localhost:8080
