--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/core": "^10.7.2",
+    "aos": "^3.0.0-beta.6",
     "apexcharts": "^3.47.0",
     "chart.js": "^4.4.1",
     "dayjs": "^1.11.10",
